- Fixed problems with typeahead and bootstrap3  - Added try/catch block in twitter service to wrapp http request  - Changed style of typeahead drop down  - Added js libs:    * typeahead+bloodhound    * handlebars  - Finished part for add/remove new followings

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,3 +35,10 @@ div.container a.brand {
     margin-left: 0;
     padding: 8px 20px 12px 40px;
 }
+
+.tt-dropdown-menu, .tt-query {
+	background-color: #fff !important;
+}
+.tt-hint {
+	display:none;
+}
